--- a/app/src/main/res/layout/activity_my_stocks.xml
+++ b/app/src/main/res/layout/activity_my_stocks.xml
@@ -14,10 +14,11 @@
 
 
   <com.melnykov.fab.FloatingActionButton
+      android:contentDescription="@string/add_stocks_button_description"
       android:id="@+id/fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_gravity="bottom|right"
+      android:layout_gravity="bottom|end"
       android:layout_margin="16dp"
       android:src="@drawable/ic_add_white_24dp"
       android:layout_alignParentBottom="true"
