--- a/app/src/main/res/xml/appwidgetproviderinfo.xml
+++ b/app/src/main/res/xml/appwidgetproviderinfo.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="200dp"
-    android:minHeight="100dp"
+    android:minWidth="250dp"
+    android:minHeight="250dp"
     android:updatePeriodMillis="10000"
-    android:previewImage="@drawable/common_full_open_on_phone"
+    android:previewImage="@drawable/cropped"
     android:initialLayout="@layout/widget_layout"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
