--- a/app/src/main/res/layout/activity_graph_chart.xml
+++ b/app/src/main/res/layout/activity_graph_chart.xml
@@ -5,6 +5,6 @@
     android:id="@+id/activity_graph_chart"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sam_chordas.android.stockhawk.charts.graphChart">
+    tools:context="com.sam_chordas.android.stockhawk.unusedCode.graphChart">
 
 </android.support.constraint.ConstraintLayout>
